# onsetpy

./: .coveragerc  .pep8speaks.yml  Dockerfile  LICENSE  README.md  codecov.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: docker.yml  test.yml
onsetpy/: stats.py  version.py
onsetpy/image/: mask.py
onsetpy/image/tests/: test_mask.py
onsetpy/io/: matrix.py  stats.py  utils.py
onsetpy/io/tests/: test_matrix.py  test_stats.py  test_utils.py
onsetpy/reporting/: report.py
onsetpy/reporting/tests/: test_report.py
onsetpy/scripts/: onset_add_metadata.py  onset_convert_fs_stats.py  onset_create_epinsight_report.py  onset_create_surgeryflow_report.py  onset_epinsight_screenshots.py  onset_evaluate_cortical_measures.py  onset_extract_patients_from_pacs.py  onset_json_to_npy.py  onset_mean_std_connectivity_matrix.py  onset_zscore_connectivity_matrix.py
onsetpy/templates/: epinsight_report.html  surgeryflow_report.html
onsetpy/utils/: gridview.py
onsetpy/utils/tests/: test_gridview.py
scripts/: gridview_to_roi.py  onset_create_roi_from_gridview.py  onset_flip_left_right_matrix.py  onset_labels_by_roi.py  onset_match_gridview_to_roi.py  onset_mean_std_connectivity_matrix.py  onset_zscore_connectivity_matrix.py
