[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onsetpy"
version = "0.1.0"
description = "Onsetpy: diffusion MRI and connectomics tools and utilities."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {text = "MIT"}
authors = [
    {name = "The Onset developers", email = "onset.labo@gmail.com"},
    {name = "Guillaume Theaud", email = "guillaume.theaud.chum@ssss.gouv.qc.ca"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering"
]
dependencies = [
"numpy==2.0.*",
"pandas==2.2.*",
"pytest==8.3.*",
"pytest-cov==5.0.*",
"pytest-mock==3.14.*",
"pytest-metadata==3.1.*",
"pytest-console-scripts==1.4.*",
"pytest-html==4.1.*",
]

[project.scripts]
onset_convert_fs_stats = "onsetpy.scripts.onset_convert_fs_stats:main"
onset_json_to_npy = "onsetpy.scripts.onset_json_to_npy:main"
onset_mean_std_connectivity_matrix = "onsetpy.scripts.onset_mean_std_connectivity_matrix:main"
onset_zscore_connectivity_matrix = "onsetpy.scripts.onset_zscore_connectivity_matrix:main"

[project.urls]
    Homepage = "https://github.com/Onset-lab"

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools]
py-modules = ["onsetpy"]